--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 URI_DB = mongodb+srv://userAdmin:userAdmin567234@cluster0.ihhs1.mongodb.net/db-contacts?retryWrites=true&w=majority
+JWT_SECRET=secret
