Adds multer, gravatar, upload,js

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 URI_DB = mongodb+srv://userAdmin:userAdmin567234@cluster0.ihhs1.mongodb.net/db-contacts?retryWrites=true&w=majority
 JWT_SECRET=secret
+UPLOAD_DIR=uploads
+AVATARS_OF_USERS=images
