--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "eslint-plugin-json": "2.1.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "nodemon": "2.0.7"
+    "jest": "26.6.3",
+    "nodemon": "2.0.7",
+    "supertest": "6.1.3"
   }
 }
