--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "cross-env NODE_ENV=production node ./bin/server.js",
     "start:dev": "cross-env NODE_ENV=development nodemon ./bin/server.js",
     "lint": "eslint **/*.{js,json}",
-    "lint:fix": "eslint --fix **/*.{js,json}"
+    "lint:fix": "eslint --fix **/*.{js,json}",
+    "test": "cross-env NODE_ENV=test jest --no-cache --verbose",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "bcryptjs": "2.4.3",
