--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:watch": "jest --watchAll"
   },
   "dependencies": {
+    "@sendgrid/mail": "7.4.2",
     "bcryptjs": "2.4.3",
     "cors": "2.8.5",
     "cross-env": "7.0.3",
