--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jimp": "0.16.1",
     "joi": "17.4.0",
     "jsonwebtoken": "8.5.1",
+    "mailgen": "2.0.14",
     "mongoose": "5.11.18",
     "mongoose-paginate-v2": "1.3.16",
     "morgan": "1.10.0",
