--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ URI_DB = mongodb+srv://userAdmin:userAdmin567234@cluster0.ihhs1.mongodb.net/db-c
 JWT_SECRET=secret
 UPLOAD_DIR=uploads
 AVATARS_OF_USERS=images
+SENDGRID_API_KEY=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
